Adjusted manifest on version 3

--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,8 @@
         "48": "/images/48.png",
         "128": "/images/128.png"
     },
-    "browser_action": {
+    "action": {
         "default_popup": "popup.html"
     },
-    "permissions": ["activeTab", "storage"]
+    "permissions": ["storage"]
 }
